v0.12/_sources/examples/calculations/Dewpoint_and_Mixing_Ratio.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_calculations_Dewpoint_and_Mixing_Ratio.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_examples_calculations_Dewpoint_and_Mixing_Ratio.py:


Dewpoint and Mixing Ratio
=========================

Use functions from `metpy.calc` as well as pint's unit support to perform calculations.

The code below converts the mixing ratio value into
a value for vapor pressure assuming both 1000mb and 850mb ambient air
pressure values. It also demonstrates converting the resulting dewpoint
temperature to degrees Fahrenheit.


.. code-block:: default

    import metpy.calc as mpcalc
    from metpy.units import units








Create a test value of mixing ratio in grams per kilogram


.. code-block:: default

    mixing = 10 * units('g/kg')
    print(mixing)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    10.0 gram / kilogram




Now throw that value with units into the function to calculate
the corresponding vapor pressure, given a surface pressure of 1000 mb


.. code-block:: default

    e = mpcalc.vapor_pressure(1000. * units.mbar, mixing)
    print(e)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    15823.283396314564 gram * millibar / kilogram




Take the odd units and force them to millibars


.. code-block:: default

    print(e.to(units.mbar))





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    15.823283396314565 millibar




Take the raw vapor pressure and throw into the dewpoint function


.. code-block:: default

    td = mpcalc.dewpoint(e)
    print(td)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    13.854135353732214 degree_Celsius




Which can of course be converted to Fahrenheit


.. code-block:: default

    print(td.to('degF'))





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    56.9374436367179 degree_Fahrenheit




Now do the same thing for 850 mb, approximately the pressure of Denver


.. code-block:: default

    e = mpcalc.vapor_pressure(850. * units.mbar, mixing)
    print(e.to(units.mbar))





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    13.449790886867381 millibar




And print the corresponding dewpoint


.. code-block:: default

    td = mpcalc.dewpoint(e)
    print(td, td.to('degF'))




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    11.376545231347285 degree_Celsius 52.47778141642504 degree_Fahrenheit





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.009 seconds)


.. _sphx_glr_download_examples_calculations_Dewpoint_and_Mixing_Ratio.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: Dewpoint_and_Mixing_Ratio.py <Dewpoint_and_Mixing_Ratio.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: Dewpoint_and_Mixing_Ratio.ipynb <Dewpoint_and_Mixing_Ratio.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
